# djtoolkit

./: .env.example  .env.service.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Caddyfile  Dockerfile  Makefile  README.md  SAASPLAN.md  djtoolkit.toml.example  docker-compose.yml  install.sh  pyproject.toml
.github/workflows/: ci-agents.yml  ci-api.yml  ci-tauri-agent.yml  ci-web.yml  ci.yml  deploy-api.yml  deploy.yml  homebrew.yml  release-macos.yml  release-tauri-agent.yml  release-windows.yml  release.yml
agent-app/: index.html  package-lock.json  package.json
agent-app/src/: App.css  App.tsx  main.tsx  types.ts  updater.ts
agent-app/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
deploy/: setup.sh
djtoolkit/: __main__.py  config.py
djtoolkit/adapters/: __init__.py  base.py  m3u.py  rekordbox.py  supabase.py  traktor.py
djtoolkit/agent/: client.py  daemon.py  deeplink.py  executor.py  keychain.py  launchd.py  local_db.py  paths.py  platform.py  runner.py  state.py  tray.py  windows_service.py
djtoolkit/api/: README.md  app.py  audit.py  auth.py  auth_routes.py  catalog_routes.py  pipeline_routes.py  rate_limit.py  routes.py  spotify_auth_routes.py
djtoolkit/coverart/: README.md  art.py
djtoolkit/db/: README.md  database.py  pg_schema.sql  postgres.py  rls.sql  schema.sql  supabase_client.py
djtoolkit/downloader/: README.md  aioslsk_client.py  slskd.py
djtoolkit/enrichment/: README.md  audio_analysis.py  spotify.py  spotify_lookup.py
djtoolkit/fingerprint/: README.md  chromaprint.py
djtoolkit/importers/: README.md  exportify.py  folder.py  trackid.py
djtoolkit/metadata/: README.md  writer.py
djtoolkit/models/: __init__.py  camelot.py  track.py
djtoolkit/recommend/: engine.py  models.py  profiles.py  scoring.py
djtoolkit/service/: __init__.py  analyzer.py  app.py  auth.py  config.py
djtoolkit/utils/: README.md  search_string.py
docs/: api.md  configuration.md  dataPipelineFlows.excalidraw  database.md  flows.md  security-backlog.md  trackid-setup.md  vercel-optimization.md
examples/: intellidj.toml
homebrew/Formula/: djtoolkit.rb  djtoolkit.rb.template
nginx/: djtoolkit.conf
packaging/macos/: build.sh  djtoolkit-onedir.spec  djtoolkit.spec  runtime_hook_path.py
packaging/windows/: build.ps1  djtoolkit.spec  djtoolkit.wxs  runtime_hook_path.py
scripts/: backfill_artwork.py
setup-assistant/: Config.xcconfig.ci  Config.xcconfig.example
setup-assistant-windows/: DJToolkitSetup.sln
setup-assistant-windows/DJToolkitSetup/: App.xaml  App.xaml.cs  DJToolkitSetup.csproj  MainWindow.xaml  MainWindow.xaml.cs
setup-assistant/DJToolkitSetup/: DJToolkitSetupApp.swift  Info.plist
setup-assistant/DJToolkitSetup.xcodeproj/: project.pbxproj
supabase/migrations/: 20260317000000_add_dj_columns.sql  20260319000000_add_fingerprint_indexes.sql  20260319100000_unique_active_pipeline_job.sql  20260319200000_create_trackid_jobs.sql  20260319300000_add_paused_status.sql  20260322000000_add_preview_url.sql  20260325000000_chain_pipeline_trigger.sql  20260325100000_agent_realtime_rls.sql  20260325200000_atomic_job_claim.sql  20260326000000_pipeline_jobs_index_and_sweep_cap.sql  (+22 more)
tests/: conftest.py  test_agent_cli_platform.py  test_agent_paths.py  test_agent_platform.py  test_aioslsk.py  test_api.py  test_audio_analysis.py  test_auth.py  test_browse_folder.py  test_camelot.py  test_catalog_routes.py  test_chromaprint.py  test_config.py  test_configure_headless.py  test_coverart.py  test_daemon_signal.py  test_database.py  test_executor_settings.py  test_exportify.py  test_folder_import_job.py  test_folder_importer.py  test_m3u_exporter.py  test_mover.py  test_pipeline_routes.py  test_playlist_export.py  test_postgres.py  test_recommend_engine.py  test_recommend_profiles.py  test_recommend_scoring.py  test_rekordbox_adapter.py  test_search_string.py  test_service_auth.py  test_service_config.py  test_service_export.py  test_service_health.py  test_service_import.py  test_slskd.py  test_spotify_auth_routes.py  test_spotify_enrichment.py  test_spotify_lookup.py  (+6 more)
ui/: index.html
web/: .env.local.example  .gitignore  Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts  vitest.config.ts
web/app/: globals.css  (+2 more)
(+291 files in other folders)
