[tool.poetry]
name = "djtoolkit"
version = "0.1.10"
description = "DJ music library toolkit — download, fingerprint, tag, and manage tracks"
authors = []
packages = [{ include = "djtoolkit" }]

[tool.poetry.scripts]
djtoolkit = "djtoolkit.__main__:app"

[tool.poetry.dependencies]
python     = "^3.11"
typer      = { extras = ["all"], version = "^0.12" }
click      = ">=8.0.0,<8.2.0"
rich       = "^13.0"
httpx      = "^0.27"
mutagen    = "^1.47"
pyacoustid = "^1.3"
thefuzz    = "^0.22"
aioslsk    = {version = ">=1.6,<2", python = ">=3.11,<3.15"}
spotipy    = "^2.24"
librosa    = "^0.10"
pyloudnorm = "^0.1"
Pillow     = "^10.0"
# essentia-tensorflow: optional TF genre/instrumental models (Linux/macOS x86_64, Python ≤3.11 only)
# Install manually: pip install essentia-tensorflow
keyring = "^25.0"
pywin32 = {version = ">=306", markers = "sys_platform == 'win32'"}
supabase = "^2.28.2"
fastapi = "^0.135.1"
uvicorn = "^0.42.0"
python-multipart = "^0.0.22"

[tool.poetry.group.dev.dependencies]
pytest       = "^8.0"
pytest-asyncio = "^0.23"
httpx        = "^0.27"
python-dotenv = "^1.2.2"
respx = "^0.22.0"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:pytest_asyncio",
]
