[project]
name = "djtoolkit"
version = "0.1.10"
description = "DJ music library toolkit — download, fingerprint, tag, and manage tracks"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12,<0.13",
    "click>=8.0.0,<8.2.0",
    "rich>=13.0,<14",
    "httpx>=0.27,<0.28",
    "mutagen>=1.47,<2",
    "pyacoustid>=1.3,<2",
    "thefuzz>=0.22,<0.23",
    "aioslsk>=1.6,<2; python_version >= '3.11' and python_version < '3.15'",
    "spotipy>=2.24,<3",
    "librosa>=0.10,<0.11",
    "pyloudnorm>=0.1,<0.2",
    "Pillow>=12.1,<13",
    # essentia-tensorflow: optional TF genre/instrumental models (Linux/macOS x86_64, Python ≤3.11 only)
    # Install manually: pip install essentia-tensorflow
    "keyring>=25.0,<26",
    "pywin32>=306; sys_platform == 'win32'",
    "supabase>=2.28.2,<3",
    "fastapi>=0.135.1,<0.136",
    "uvicorn>=0.42.0,<0.43",
    "python-multipart>=0.0.22,<0.0.23",
    "shazamio>=0.8.1,<0.9",
    "yt-dlp>=2026.3.17,<2027",
    "pydub>=0.25.1,<0.26",
    "asyncio-throttle>=1.0.2,<2",
    "bgutil-ytdlp-pot-provider>=1.3.1,<2",
]

[project.scripts]
djtoolkit = "djtoolkit.__main__:app"

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<0.24",
    "httpx>=0.27,<0.28",
    "python-dotenv>=1.2.2,<2",
    "respx>=0.22.0,<0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:pytest_asyncio",
]
